<resources>
<!--    <string name="app_name">NavigationDrawer</string>-->
    <string name="app_name">mobileassignment</string>
<!--    <string name="happy_birthday_sam">Happy Birthday! Sam</string>-->
<!--    <string name="signature_text">From Emma</string>-->
<!--    <string name="todo">TODO</string>-->
<!--    <string name="title_activity_maps">MapsActivity</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="bookmarks_fragment">bookmarks</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="login">Login</string>
    <string name="signout">Signout</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="campus_location">Campus Location</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="bookmarks">bookmarks</string>
    <string name="booking">booking</string>
    <string name="status">Status</string>
</resources>