<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
    android:id="@+id/nav_home"
    android:icon="@drawable/ic_baseline_home_24"
    android:title="@string/home"/>

    <item
    android:id="@+id/nav_location"
    android:icon="@drawable/ic_baseline_location_city_24"
    android:title="@string/campus_location" />

    <item
    android:id="@+id/nav_account"
    android:title="@string/account"
    android:icon="@drawable/ic_baseline_account_box_24"/>

    <item
        android:id="@+id/nav_bookmarks"
        android:title="@string/bookmarks"
        android:icon="@drawable/ic_baseline_bookmark_24"/>

    <item
        android:id="@+id/nav_booking"
        android:title="@string/booking"
        android:icon="@drawable/ic_baseline_book_online_24"/>
    <item
    android:id="@+id/nav_setting"
    android:title="@string/setting"
    android:icon="@drawable/ic_baseline_settings_24"/>

    <item android:title="@string/status">

    <menu>

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/logout"/>
    </menu>

    </item>
</menu>